firefox cut off bg issue fixed

--- a/apps/andin-portfolio/src/styles/globals.css
+++ b/apps/andin-portfolio/src/styles/globals.css
@@ -14,3 +14,10 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+html {
+  @apply bg-[#EDF6F9];
+}
+body {
+  @apply bg-main bg-fixed bg-cover bg-left-top; 
+}
